improve data decoding performance